Fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,11 @@ ul {
 #newProject {
   display: flex;
   gap: 6px;
+  justify-content: space-between;
+}
+
+#projectName {
+  flex: 1;
 }
 
 #newProjectButton {
